[metadata]
name = Algorithms playground
version = 0.0.1
description = Algorithms playground
long_description = file: README.md, CHANGELOG.md, LICENSE.md
keywords = Time Management
author = "Nikita Vakula"
license = MIT License
author_email = "programmistov.programmist@gmail.com"
url = "https://github.com/krjakbrjak/time_management"
python_requires = >= 3.8.*
classifiers =
    Operating System :: OS Independent
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8

[options]
include_package_data = True
install_requires =
setup_requires =
    setuptools
package_dir=
    =src
packages=find_namespace:

[options.packages.find]
where=src

[options.package_data]
